--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -38,9 +40,16 @@ android {
     buildFeatures {
         dataBinding true
     }
+
+    dataBinding {
+        enabled = true
+    }
+
+
 }
 
 dependencies {
+
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -49,6 +58,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     //Retrofit 라이브러리
     implementation 'com.squareup.retrofit2:retrofit:2.6.4'
@@ -61,4 +73,14 @@ dependencies {
 
     //lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+//    //Parcelize
+//    apply plugin: 'com.android.application'
+//    apply plugin: 'kotlin-android'
+//    apply plugin: 'kotlin-parcelize'
+
+    //BindingAdapter
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+
+
 }
